--- a/algorithms_first_run.ipynb
+++ b/algorithms_first_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,6 +1316,63 @@
     "print(np.round(score).astype(int))\n",
     "print(np.sum(np.abs(y_test-np.round(score))))\n",
     "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('results_e1/E1_AnnThyroid_B_FEAWAD_results.npz', allow_pickle=True)\n",
+    "scores = data['scores']\n",
+    "y_test = data['y_test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.9398872e-03,  8.6008072e-01],\n",
+       "       [ 3.8600564e-02,  6.6010320e-01],\n",
+       "       [ 8.2738161e-02,  8.9040339e-01],\n",
+       "       ...,\n",
+       "       [ 4.7369629e-02,  1.8650217e+00],\n",
+       "       [-3.6982227e-02,  1.5153576e+00],\n",
+       "       [ 1.3657956e+01,  1.0644087e+01]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   },
   {
