Reorganize repository structure

--- a/notebooks/E1_results_visualization.ipynb
+++ b/notebooks/E1_results_visualization.ipynb
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "csv_file_path = 'experiment1_results.csv'\n",
+    "csv_file_path = 'results/experiment1_results.csv'\n",
     "\n",
     "plot_scenario_A_by_model(csv_file_path)\n"
    ]
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "plot_auc_scatter_with_regression(\"experiment1_results.csv\")\n"
+    "plot_auc_scatter_with_regression(\"results/experiment1_results.csv\")\n"
    ]
   },
   {
@@ -320,7 +320,7 @@
     }
    ],
    "source": [
-    "plot_combined_auc_scatter_with_r2(\"experiment1_results.csv\")\n"
+    "plot_combined_auc_scatter_with_r2(\"results/experiment1_results.csv\")\n"
    ]
   },
   {
@@ -383,7 +383,7 @@
     }
    ],
    "source": [
-    "plot_median_auc_vs_aucpr_by_scenario(\"experiment1_results.csv\")"
+    "plot_median_auc_vs_aucpr_by_scenario(\"results/experiment1_results.csv\")"
    ]
   }
  ],
