--- a/notebooks/E2_results_visualization.ipynb
+++ b/notebooks/E2_results_visualization.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "plot_median_aucpr_by_model_and_scenario('experiment2_results.csv')"
+    "plot_median_aucpr_by_model_and_scenario('results/experiment2_results.csv')"
    ]
   },
   {
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "plot_median_aucpr_by_model_and_scenario_per_dataset(\"experiment2_results.csv\")"
+    "plot_median_aucpr_by_model_and_scenario_per_dataset(\"results/experiment2_results.csv\")"
    ]
   },
   {
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "plot_boxplots_aucpr_by_scenario_for_each_model('experiment2_results.csv')"
+    "plot_boxplots_aucpr_by_scenario_for_each_model('results/experiment2_results.csv')"
    ]
   },
   {
@@ -395,7 +395,7 @@
     }
    ],
    "source": [
-    "plot_boxplots_aucpr_by_scenario_per_dataset(\"experiment2_results.csv\")\n"
+    "plot_boxplots_aucpr_by_scenario_per_dataset(\"results/experiment2_results.csv\")\n"
    ]
   },
   {
